--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,35 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SplashScreen">
+
+        <!--Main-->
+        <activity android:name=".MainActivity" />
+
+        <!--SplashScreen-->
+        <activity android:name=".SplashScreenActivity" />
+        <!--
+        <activity android:name=".SplashScreenActivity" android:theme="@style/FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        -->
+
+        <!--Adivinhe-->
+        <activity android:name=".AdivinheActivity" />
+
+        <!--Time-->
+        <activity android:name=".TimeActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".TimeDetailsActivity"></activity>
+
     </application>
 
 </manifest>
